# vacuum_robot_course_project

./: .gitignore  INSTALL_GAZEBO11.md  README.md  TROUBLESHOOTING.md  fix_serial_port.sh  frames_2025-11-25_11.00.43.gv  pre_plan.md  run_nav2_controller.sh  setup_ros_env.sh  test_lidar_sdk.cpp  test_protocol.py  test_rplidar_sdk.sh
src/2_vacuum_robot/vacuum_base/: package.xml  setup.cfg  setup.py
src/2_vacuum_robot/vacuum_base/resource/: vacuum_base
src/2_vacuum_robot/vacuum_base/vacuum_base/: protocol.py  serial_base_node.py
src/2_vacuum_robot/vacuum_bringup/: CMakeLists.txt  package.xml
src/2_vacuum_robot/vacuum_bringup/config/: nav2_params_real.yaml  slam_toolbox.yaml
src/2_vacuum_robot/vacuum_bringup/launch/: navigate.launch.py
src/sensor_interface/: CMakeLists.txt  package.xml
src/sensor_interface/include/sensor_interface/: laser_interface.hpp
src/sensor_interface/src/: laser_sensor_node.cpp  real_laser_interface.cpp  sim_laser_interface.cpp
src/vacuum_robot_real/: CMakeLists.txt  package.xml
src/vacuum_robot_real/config/: nav2_params_real.yaml  slam_toolbox.yaml
src/vacuum_robot_real/launch/: nav2_controller.launch.py  navigation.launch.py  robot_bringup_real.launch.py  robot_description_real.launch.py  robot_serial_driver.launch.py  rviz.launch.py
src/vacuum_robot_real/map/: vacuum_robot.pgm  vacuum_robot.yaml
src/vacuum_robot_real/rviz/: robot_navigation.rviz
src/vacuum_robot_real/scripts/: fake_odom.py  robot_serial_driver.py
src/vacuum_robot_real/urdf/: robot_base_real.xacro  robot_gazebo_real.xacro
src/vacuum_robot_sim/: CMakeLists.txt  package.xml
src/vacuum_robot_sim/config/: nav2_params.yaml  nav2_params_old.yaml  slam_toolbox.yaml
src/vacuum_robot_sim/launch/: complete_simulation.launch.py  gazebo.launch.py  nav2_controller.launch.py  navigation.launch.py  real_lidar_rviz.launch.py  robot_description.launch.py  rviz.launch.py  spawn_robot.launch.py
src/vacuum_robot_sim/map/: vacuum_robot.yaml
src/vacuum_robot_sim/rviz/: robot_navigation.rviz
src/vacuum_robot_sim/scripts/: coverage_controller_test01.py  coverage_controller_test02.py  nav2_controller.py  nav2_f2c_planner.py  new_nav2_controller.py  test.f2c.py
src/vacuum_robot_sim/urdf/: robot_base.xacro  robot_gazebo.xacro  robot_gazebo_sim.xacro
src/vacuum_robot_sim/worlds/: simple_world.world
