<?xml version="1.0"?>
<package format="3">
  <name>vacuum_base</name>
  <version>0.0.1</version>
  <description>Minimal serial base driver for vacuum robot (cmd_vel -> wheel speeds, wheel feedback -> odom + TF).</description>
  <maintainer email="sunqidong152@gmail.com">rest1</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
